@@ -143,9 +143,9 @@ int __cdecl isblank(int _C);
 #endif
 
   typedef wchar_t wctrans_t;
-  _CRTIMP wint_t __cdecl towctrans(wint_t,wctrans_t);
-  _CRTIMP wctrans_t __cdecl wctrans(const char *);
-  _CRTIMP wctype_t __cdecl wctype(const char *);
+  wint_t __cdecl towctrans(wint_t,wctrans_t);
+  wctrans_t __cdecl wctrans(const char *);
+  wctype_t __cdecl wctype(const char *);
 
 #ifdef __cplusplus
 }
